add path /recipes/random to get random recipes
