# doc/openApi.yml
@@ -44,7 +44,7 @@ paths:
               $ref: "#/components/schemas/UserRegistration"
         required: true
       tags:
-        - Utilisateurs
+        - Users
       responses:
         "200":
           content:
@@ -52,9 +52,51 @@ paths:
               schema:
                 $ref: "#/components/schemas/UserModel"
           description: successful operation
+  /recipes/random:
+    get:
+      summary: get random recipes
+      tags:
+        - Recipes
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Recipes"
+          description: successful operation
 
 components:
   schemas:
+    Recipes:
+      type: object
+      properties:
+        title:
+          type: string
+          format: string
+        image:
+          type: string
+          format: string
+        instructions:
+          type: string
+          format: string
+        ingredients:
+          type: array
+          items:
+            $ref: "#/components/schemas/Ingredients"
+    Ingredients:
+      type: object
+      properties:
+        name:
+          type: string
+          format: string
+        quantity:
+          type: number
+          format: number
+        unit:
+          type: string
+          format: string
     UserRegistration:
       required:
         - login
